css/styles.css
/* Reset and general */


:root {
  --header-height: 100px;
  --inactive-color: #6a6a6a;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Montserrat', sans-serif;
}

img {
  max-width: 100%;
  max-height: 100%;
}

span {
  font-size: .9rem;
}

ul {
  list-style: none;
}

ul li a {
  text-decoration: none;
  color: #7d7f83;
  padding: 0 15px;
  text-transform: uppercase;
}

ul li a:hover {
  color: white;
} 


/* UTILITIES */

.d-flex {
  display: flex;
}

.f-column {
  flex-direction: column;
}

.f-wrap {
  flex-wrap: wrap;
}

.justify-content-center {
  justify-content: center;
}

.justify-content-space-between {
  justify-content: space-between;
}

.align-items-center {
  align-items: center;
}

.current {
  box-shadow: 
  -15px 0 0 0 black,
  -20px 0px 0px 0px green;
  color: white;
}

.inactive {
  color: var(--inactive-color);
}

.h-50 {
  height: 50%;
}

.text-center {
  text-align: center;
}

.m-b-20 {
  margin-bottom: 20px;
}

.round {
  border-radius: 50%;
}


.inactive:hover {
  color: white;
  cursor: pointer;
}

.d-block-mb {
  display: none;
}

.menu-active::after{
  content: '';
  display: block;
  width: 30%;
  margin: 11px auto;
  /* box-shadow: 0px 11px 0 1px green; */
  border-bottom: 1px solid green;
}


/* TOP SECTION */

.top-section {
  height: calc(100vh - var(--header-height));
  display: flex;
}


/* HEADER */

header {
  width: calc(100% - 240px);
  background-color: rgba(10, 10, 10, 0.9);
  height: var(--header-height);
  position: fixed;
  top: 0;
  right: 0;
  z-index: 999;
  color: white;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  padding-right: 10px;
}

.btn {
  padding: 10px 40px;
  border: 1px solid white;
  border-radius: 99999px;
}

.btn:hover {
  transform: scale(1.06);
}

/* ASIDE */

aside {
  width: 240px;
  background-color: black;
  height: 100%;
  /*  */
  color: white;
  overflow: hidden;
}

aside img {
  width: 180px;
}

.logo {
  height: var(--header-height);
}

.aside-main {
  height: calc(100% - var(--header-height));
  padding-bottom: 20px;
  /* overflow: auto; */
}

.aside-main img {
  width: 30px;
  vertical-align: middle;
}

.aside-top, .aside-bottom{
  padding: 0 20px;
}

.aside-top div, .aside-top h3 {
  margin-bottom: 10px;
}

.aside-top .fa-square-plus {
  font-size: 3rem;
  vertical-align: middle;
}

.aside-bottom {
  margin-top: auto;
}

.aside-bottom #download-button {
  opacity: 0.6;
  width: 30px;
  aspect-ratio: 1/1;
  background-color:unset;
}

.aside-bottom .timeline {
  display: inline-block;
  height: 2px;
  width: 95%;
  margin: 0;
}

.install-app {
  display: block;
}

#download-button img {
  transform: scale(1);
}

#download-button:hover {
  opacity: 1;
}

.aside-bottom .img-container-small {
  display: inline-block;
  background-color: #7d7f837c;
  width: 30px;
  aspect-ratio: 1/1;
}

.img-container-small img {
  transform: scale(0.6);
  vertical-align: middle;
}

.playlist-list {
  overflow: auto;
  height: calc(100% - 210px);
}

/* MAIN */

main {
  width: calc(100% - 240px);
  background-color: #141922;
  overflow:auto;
  padding: 0 20px;
  padding-top: calc(var(--header-height) + 10px);
  color: white;
}


main .menu {
  height: 50px;
  margin-bottom: 20px;
}


.col {
  width: calc(100% / 6);
  padding: 0 0.6%;
}


main h2, main p  {
  padding-left: 10px;
}

.card{
  position: relative;
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  aspect-ratio: 1/1;
  background-color: rgba(10, 10, 10, 0.6);
  display: none;
}

.overlay .fa-circle-play {
  font-size: 3.5rem;
}

.img-container:hover .overlay {
  display: flex;
}

/* FOOTER */

footer {
  height: var(--header-height);
  background-color: #282828;
  /*  */
  color: white;
  padding: 0 30px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: .7rem;

}


.footer-left, .footer-right {
  height: inherit;
  width: 10%;
  min-width: 200px;
}

.footer-left .img-small {
  min-width: 25%;
}

.footer-left .song-info {
  min-width: 50%;
  padding: 0 8px;
}

.footer-left .song-actions {
  min-width: 25%;
}

.footer-left .song-actions i {
  color: #7d7f83;
}

.footer-left .song-actions i:hover {
  color: white;
}

.footer-center {
  height: inherit;
  max-width: 30%;
}

.timeline {
  margin: 0 15px;
  height: 6px;
  width: 530px;
  position: relative;
  background-color: #5a5a5a;
  border-radius: 5px;
}

.timeline-progress {
  position: absolute;
  top: 0;
  left: 0;
  height: 6px;
  background-color: #c1c1c1;
  border-radius: 5px;
  width: 25%;
}

.playhead i {
  font-size: 1rem;
  padding: 0 5%;
}

.playhead i.fa-circle-play {
  font-size: 2rem;
}

.playhead i.fa-circle-play:hover {
  transform: scale(1.15);
}


.footer-right .timeline {
  min-width: 120px;
}

.options i {
  padding: 0 7px;
}

.options {
  width: 50%;
}



/* RESPOSIVE */

@media (max-width: 1199px) {
  .col {
    width: calc(100% / 4);
  }
}



@media (max-width: 860px) {
  .col {
    width: calc(100% / 2);
  }
}


@media (max-width: 680px) {


  main {
    width: calc(100% - 70px);
  }
  header {
    width: calc(100% - 70px);
  }
  aside {
    width: 70px;
  }

  .d-none-mb, .aside-bottom .timeline {
    display: none;
  }

  .d-block-mb {
    display: block;
    width: 30px;
  }

  .logo {
    height: unset;
    margin: 15px 0;
  }

  footer {
    padding: 0 15px;
  }

  .footer-right .timeline {
    min-width: 40px;
    margin-left: 5px;
  }

  .options i {
    padding: 0 3px;
  }
}

